2005-03-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Remove the three different preset key sets and
	replace them with a "restore defaults" button. The set of people
	who are hardcore enough to use the original keyset and the set of
	people who can't figure out how to change the keys do not
	intersect. Furthermore the left-hand key-set doesn't work outside
	of nearly-US-standard keyboards and most left-handers have found
	some way to deal with the keypad already. The rest can change the
	keys to suit themselves. This was all motivated by bug #171745
	which has an entirely different root cause.

2005-03-23  Dennis Cranston  <dennis_cranston@yahoo.com>

	* menu.c: Add mnemonics to Move menu items.
	* game.c: Make scores dialog more HIG compliant.
	* properties.c: Make preference dialog more HIG compliant.
	
2005-03-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c (start_new_game): Make New Game record the score. This
	brings it into line with the other game and sots half of bug
	#107846.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnobots2.xml: Bump the app version number. No revisions.

2005-02-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnobots.c (main): 
	* graphics.c (load_game_graphics): Make sure that we have at least
	one theme. If not, complain.

2005-02-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnobots2.xml: Documentation updates from Adam Weinberger
	(bug #165575).

2004-11-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnobots2.soundlist.in (_description): Fix the description.

2004-09-09  callum  <callum@spooky-possum.org>

	* help/C/figures/gnobots2-main.png:
	* help/C/gnobots2.xml: Updates for 2.8.

2004-08-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* cows.png:
	* eggs.png:
	* mice.png:
	* windows.png: Moved these themes to the gnome-games-extra-data
	package.
	
2004-07-20  Christian Neumair  <chris@gnome-de.org>
